# pyfembed

./: .gitignore  pyproject.toml  readme.md  setup.py
pyfembed/: __init__.py  pyfembed_class.py
pyfembed/interfaces/: __init__.py
src/pyfembed/: __init__.py  pyfembed_class.py
src/pyfembed/interfaces/: __init__.py
