[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[metadata]
name = "pyfembed"
version = "0.1.5"
author = "raishid"
author_email = "raishidavid@gmail.com"
description = "Upload video with the Fembed API"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[dynamic]
dependencies = ["requests", "tus.py"]